	to merge lags and differences of a pseries into the original
	pdata.frame. Will possibly be added to the user space in the
	future.

Changes since version 1.2-10
	
	* for unbalanced hausman-taylor model, the printing of the error
	components was wrong, it is now fixed
	
	* the printing of the removed variables (cst or NA) is improved

	* the pgmm function has been improved to deal correctly with holes
	in the cross-sections ; a collapse argument is added to limit the
	number of gmm instruments

	* the CoefTAble element of summary.pgmm objects is renamed
	coefficients, so that it can easily be extracted using the coef
	method

	* the default value for robust is now TRUE in the summary.pgmm
	method

	* a new argument lost.ts is added in pgmm to select manually the
	number of lost time series

	* almost null columns of instruments are removed (this happens
	when within/between transformation is performed on between/within
	series

	* plm now accept three part formulas, the last part being for
	instruments introduced only in the within form

	* the predict method for panelmodel objects is now exported

	* plm now estimate systems of equations if a list of formulas is
	provided as the first argument

Changes since version 1.3-0

	* an update method for panelmodel objects is provided
	
	* the Wages example is removed from the pvar man page because it's time consuming
	
	
Changes sinve version 1.3-1

	* a subset argument is added to print.summary.plm and summary.pht
	so that a subset of coefficient may be selected

	* fixed a small problem on the printing of the typologie of the
	variables for pht models
	
	* the "name" of the tests is now the formula truncated so that it
	prints on only one line
	
	* restrict.matrix argument added to deals with linear restrictions

	* a vcov argument is added to summary.plm so that a variance matrix can be supplied

	* the deviance method for panelmodel objects is now exported (12/02)
	