@@ -1,21 +1,20 @@
-pht <-  function(formula, data, subset, na.action, index = NULL, ...){
-  data.name <- paste(deparse(substitute(data)))
+pht <-  function(formula, data, subset, na.action, model = c("ht", "am", "bmc"), index = NULL, ...){
   cl <- match.call(expand.dots = TRUE)
   mf <- match.call()
+  model <- match.arg(model)
   # compute the model.frame using plm with model = NA
   mf[[1]] <- as.name("plm")
   mf$model <- NA
-  data <- eval(mf,parent.frame())
+  data <- eval(mf, parent.frame())
   # estimate the within model without instrument and extract the fixed
   # effects
-  old.formula <- formula
   formula <- pFormula(formula)
-  formula <- formula(formula, rhs = 1, lhs = 1)
+  if (length(formula)[2] == 1) stop("a list of exogenous variables should be provided")
+  else formula <- expand.formula(formula)
   mf$model = "within"
-  mf$formula <- formula
+  mf$formula <- formula(formula, rhs = 1)
   within <- eval(mf, parent.frame())
   fixef <- fixef(within)
-  formula <- old.formula
   id <- index(data, "id")
   time <- index(data, "time")
   pdim <- pdim(data)
@@ -24,12 +23,9 @@ pht <-  function(formula, data, subset, na.action, index = NULL, ...){
   n <- pdim$nT$n
   N <- pdim$nT$N
   Ti <- pdim$Tint$Ti
-  
   # get the typology of the variables
-  formula <- pFormula(old.formula)
   X <- model.matrix(formula, data, rhs = 1, model = "within")
   W <- model.matrix(formula, data, rhs = 2, model = "within")
-
   exo.all <- colnames(W)
   all.all <- colnames(X)
   edo.all <- all.all[!(all.all %in% exo.all)]
@@ -38,7 +34,6 @@ pht <-  function(formula, data, subset, na.action, index = NULL, ...){
   exo.var <- exo.all[!(exo.all %in% exo.cst)]
   edo.cst <- all.cst[!(all.cst %in% exo.cst)]
   edo.var <- edo.all[!(edo.all %in% edo.cst)]
-
   if (length(edo.cst) > length(exo.var)){
     stop(" The number of endogenous time-invariant variables is greater
            than the number of exogenous time varying variables\n")
@@ -51,12 +46,12 @@ pht <-  function(formula, data, subset, na.action, index = NULL, ...){
   if (length(edo.cst) > 0) NC <- X[ , edo.cst, drop = FALSE] else NC <- NULL
 
   if (length(all.cst) !=0 )
-    zo <- twosls(fixef[as.character(id)], cbind(XC,NC), cbind(XC,XV), TRUE)
-  else zo <- lm(fixef~1)
+    zo <- twosls(fixef[as.character(id)], cbind(XC, NC), cbind(XC, XV), TRUE)
+  else zo <- lm(fixef ~ 1)
 
   sigma2 <- list()
   sigma2$one <- 0
-  sigma2$idios <- deviance(within)/(N-n)
+  sigma2$idios <- deviance(within)/ (N - n)
   sigma2$one <- deviance(zo) / n
   
   if(balanced){
@@ -64,12 +59,12 @@ pht <-  function(formula, data, subset, na.action, index = NULL, ...){
     theta <- 1 - sqrt(sigma2$idios / sigma2$one)
   }
   else{
+    # for unbalanced data, the harmonic mean of the Ti's is used ; why ??
     barT <- n / sum(1 / Ti)
     sigma2$id <- (sigma2$one - sigma2$idios) / barT
     theta <- 1 - sqrt(sigma2$idios / (sigma2$idios + Ti * sigma2$id))
     theta <- theta[as.character(id)]
   }
-
   estec <- structure(list(sigma2 = sigma2, theta = theta),
                      class = "ercomp",
                      balanced = balanced,
@@ -77,10 +72,53 @@ pht <-  function(formula, data, subset, na.action, index = NULL, ...){
   y <- pmodel.response(data, model = "random", theta = theta)
   X <- model.matrix(formula, data, model = "random", theta = theta)
   within.inst <- model.matrix(formula, data, model = "within")
-  between.inst <- model.matrix(formula, data, model = "Between",
-                               rhs = 2)[, exo.var, drop = FALSE] 
-  W <- cbind(within.inst, XC, between.inst)
-  result <- twosls(y,X,W)
+
+  if (model == "ht"){
+    between.inst <- model.matrix(formula, data, model = "Between",
+                                 rhs = 2)[, exo.var, drop = FALSE]
+    W <- cbind(within.inst, XC, between.inst)
+  }
+  if (model == "am"){
+    Vx <- model.matrix(formula, data, model = "pooling",
+                       rhs = 2)[, exo.var, drop = FALSE]
+    if (balanced){
+      # Plus rapide mais pas robuste au non cylindré
+      Vxstar <- Reduce("cbind",
+                       lapply(seq_len(ncol(Vx)),
+                              function(x)
+                              matrix(Vx[, x], ncol = T, byrow = TRUE)[rep(1:n, each = T), ]))
+    }
+    else{
+      Xs <- lapply(seq_len(ncol(Vx)), function(x)
+                   structure(Vx[, x], index = index(data), class = c("pseries", class(Vx[, x]))))
+      Vx2 <- Reduce("cbind", lapply(Xs, as.matrix))
+      Vxstar <- Vx2[rep(1:n, times = Ti), ]
+      Vxstar[is.na(Vxstar)] <- 0
+    }
+    W <- cbind(within.inst, XC, Vxstar)
+  }
+  if (model == "bmc"){
+    between.inst <- model.matrix(formula, data, model = "Between",
+                                 rhs = 2)[, exo.var, drop = FALSE]
+    Vx <- within.inst
+    if (balanced){
+      # Plus rapide mais pas robuste au non cylindré
+      Vxstar <- Reduce("cbind",
+                       lapply(seq_len(ncol(Vx)),
+                              function(x)
+                              matrix(Vx[, x], ncol = T, byrow = TRUE)[rep(1:n, each = T), ]))
+    }
+    else{
+      Xs <- lapply(seq_len(ncol(Vx)), function(x)
+                   structure(Vx[, x], index = index(data), class = c("pseries", class(Vx[, x]))))
+      Vx2 <- Reduce("cbind", lapply(Xs, as.matrix))
+      Vxstar <- Vx2[rep(1:n, times = Ti), ]
+      Vxstar[is.na(Vxstar)] <- 0
+    }
+    W <- cbind(within.inst, XC, between.inst, Vxstar)
+  }
+    
+  result <- twosls(y, X, W)
   K <- length(data)
   ve <- lev2var(data)
   varlist <- list(xv = unique(ve[exo.var]),
@@ -89,7 +127,6 @@ pht <-  function(formula, data, subset, na.action, index = NULL, ...){
                   nc = unique(ve[edo.cst])
                   )
   varlist <- lapply(varlist, function(x){ names(x) <- NULL; x})
-
   result <- list(coefficients = coef(result),
                  vcov         = vcov(result),
                  residuals    = resid(result),
