@@ -446,4 +446,8 @@ Changes sinve version 1.3-1
 	* a vcov argument is added to summary.plm so that a variance matrix can be supplied
 
 	* the deviance method for panelmodel objects is now exported (12/02)
+
+	* the hausman-taylor now support the Amemiya MaCurdy and the Breush-Mizon-Schmidt version
+
+	* a small bug is fixed on the var2lev function to deal the case when there are no factors
 	
